--- a/ImageReader/ImageReader/ImageReader.csproj
+++ b/ImageReader/ImageReader/ImageReader.csproj
@@ -57,7 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Command\AppCommand.cs" />
-    <Compile Include="Model\BoolConverter.cs" />
+    <Compile Include="Model\Loader.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
